[layouts] Ensure we only set the main background to z-index -1

--- a/graphics/style/base.css
+++ b/graphics/style/base.css
@@ -11,7 +11,7 @@ body {
     overflow: hidden;
 }
 
-#background {
+#container > #background {
     z-index: -1;
 }
 
